@@ -10,9 +10,9 @@
 # @synopsis
 #
 # \arguments{
-#   \item{key}{A @list or an @environment from which a hexadecimal 
-#     key will be generated and that will constitute the name part of
-#     the cache filename.}
+#   \item{key}{A @list or an @environment from which a @character string
+#     checksum will be calculated and that will constitute the name part 
+#     of the cache filename.}
 #   \item{suffix}{A @character string to be appended to the end of the
 #     filename.}
 #   \item{...}{Arguments passed to @see "getCachePath".}
@@ -23,6 +23,11 @@
 # }
 #
 # @author
+#
+# \seealso{
+#   Internally, the generic function @see "getChecksum" is used to
+#   calculate the checksum of argument \code{key}.
+# }
 #
 # @keyword "programming"
 # @keyword "IO"
@@ -38,16 +43,13 @@ setMethodS3("generateCache", "default", function(key=NULL, suffix=".Rcache", ...
       throw("Argument 'key' must be a list, an environment or NULL: ", 
                                                             class(key)[1]);
     }
-
-    # Using key object requires the CRAN package 'digest'.
-    require(digest) || throw("Package not loaded: digest");
   }
 
   # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
   # Generate cache name from hash code of key object
   # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
   if (!is.null(key)) {
-    hashCode <- digest::digest(key);
+    hashCode <- getChecksum(key);
     cacheName <- hashCode;
   }
 
@@ -65,6 +67,9 @@ setMethodS3("generateCache", "default", function(key=NULL, suffix=".Rcache", ...
 
 ############################################################################
 # HISTORY:
+# 2011-04-01
+# o Now generateCache() utilizes a generic function getChecksum()
+#   to obtain the checksum.
 # 2007-07-02
 # o Added support for argument 'key' is an environment.
 # 2005-12-09
