@@ -19,9 +19,9 @@
 \usage{\method{generateCache}{default}(key=NULL, suffix=".Rcache", ...)}
 
 \arguments{
-  \item{key}{A \code{\link[base]{list}} or an \code{\link[base]{environment}} from which a hexadecimal
-    key will be generated and that will constitute the name part of
-    the cache filename.}
+  \item{key}{A \code{\link[base]{list}} or an \code{\link[base]{environment}} from which a \code{\link[base]{character}} string
+    checksum will be calculated and that will constitute the name part
+    of the cache filename.}
   \item{suffix}{A \code{\link[base]{character}} string to be appended to the end of the
     filename.}
   \item{...}{Arguments passed to \code{\link{getCachePath}}().}
@@ -32,6 +32,11 @@
 }
 
 \author{Henrik Bengtsson (\url{http://www.braju.com/R/})}
+
+\seealso{
+  Internally, the generic function \code{\link{getChecksum}}() is used to
+  calculate the checksum of argument \code{key}.
+}
 
 
 
